force-app/main/default/objects/GlobalLeadTime__c/GlobalLeadTime__c.object-meta.xml
<CustomObject>
    <label>GlobalLeadTime</label>
    <nameField>
        <label>GlobalLeadTime</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GlobalLeadTime</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>