force-app/main/default/objects/GlobalLeadTime__c/fields/X10__c.field-meta.xml
<CustomField>
    <fullName>X10__c</fullName>
    <label>10</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>