force-app/main/default/objects/GlobalLeadTime__c/fields/X30__c.field-meta.xml
<CustomField>
    <fullName>X30__c</fullName>
    <label>30</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>