force-app/main/default/objects/GlobalLeadTime__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Schedule__c</columns>
    <columns>QtyLL__c</columns>
    <columns>QtyUL__c</columns>
    <columns>X10__c</columns>
    <columns>X20__c</columns>
    <columns>X30__c</columns>
    <columns>X40__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>